--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
       <!-- Discover Events Section -->
       <section id="discover">
         <h2>Discover Events</h2>
+        <div class="search-filter">
+          <input type="text" id="search-input" placeholder="Search events..." />
+          <select id="filter-status">
+            <option value="all">All Events</option>
+            <option value="upcoming">Upcoming Events</option>
+            <option value="current">Current Events</option>
+            <option value="past">Past Events</option>
+          </select>
+        </div>
         <div id="events-feed" class="events-feed">
           <!-- Event cards will be added dynamically here -->
         </div>
