Reminders and Notifications

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Header with User Authentication Section -->
+  <!-- Header with User Auth (from previous feature) -->
   <header>
     <h1>EventSphere</h1>
     <div id="user-auth">
-      <!-- These buttons will be replaced by user info if logged in -->
+      <!-- This will be updated by script.js based on authentication state -->
       <button id="login-btn">Login</button>
       <button id="register-btn">Register</button>
     </div>
