--- a/index.html
+++ b/index.html
@@ -1,184 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EventSphere</title>
-  <!-- FullCalendar CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EventSphere</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <!-- FullCalendar CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-  <!-- Header -->
-  <header>
+    <!-- Header -->
+    <!-- <header>
     <h1>EventSphere</h1>
-  </header>
+  </header> -->
 
-  <!-- Main Container -->
-  <div class="container">
-    <!-- Sidebar Navigation -->
-    <nav class="sidebar">
-      <ul>
-        <li><a href="#dashboard">Dashboard</a></li>
-        <li><a href="#discover">Discover</a></li>
-        <li><a href="#create-event">Create Event</a></li>
-        <li><a href="#tickets">Tickets</a></li>
-        <li><a href="#calendar">Calendar</a></li>
-      </ul>
-    </nav>
+    <!-- Main Container -->
+    <div class="container">
+        <!-- Sidebar Navigation -->
+        <header>
+            <a href="#" class="EventSphere">EventSphere</a>
+            <nav class="sidebar">
+                <ul>
+                    <li><a href="#dashboard">Dashboard</a></li>
+                    <li><a href="#discover">Discover</a></li>
+                    <li><a href="#create-event">Create Event</a></li>
+                    <li><a href="#tickets">Tickets</a></li>
+                    <li><a href="#calendar">Calendar</a></li>
+                </ul>
+            </nav>
+            <!-- <img src="" alt=""> -->
+        </header>
 
-    <!-- Main Content Area -->
-    <main class="main-content">
-      <!-- Dashboard Section -->
-      <section id="dashboard">
-        <h2>Dashboard</h2>
-        <div class="stats">
-          <div class="card">
-            <h3>Total Events</h3>
-            <p id="total-events">0</p>
-          </div>
-          <div class="card">
-            <h3>Tickets Sold</h3>
-            <p id="tickets-sold">0</p>
-          </div>
-          <div class="card">
-            <h3>Upcoming Events</h3>
-            <p id="upcoming-events">0</p>
-          </div>
-        </div>
-      </section>
+        <!-- Main Content Area -->
+        <main class="main-content">
+            <!-- Dashboard Section -->
+            <section id="dashboard">
+                <h2>Dashboard</h2>
+                <div class="stats">
+                    <div class="card">
+                        <h3>Total Events</h3>
+                        <p id="total-events">0</p>
+                    </div>
+                    <div class="card">
+                        <h3>Tickets Sold</h3>
+                        <p id="tickets-sold">0</p>
+                    </div>
+                    <div class="card">
+                        <h3>Upcoming Events</h3>
+                        <p id="upcoming-events">0</p>
+                    </div>
+                </div>
+            </section>
 
-      <!-- Event Creation Section -->
-      <section id="create-event">
-        <h2>Create Event</h2>
-        <form id="create-event-form">
-          <div class="form-group">
-            <label for="event-name">Event Name:</label>
-            <input type="text" id="event-name" required />
-          </div>
-          <div class="form-group">
-            <label for="event-date">Date:</label>
-            <input type="date" id="event-date" required />
-          </div>
-          <div class="form-group">
-            <label for="event-description">Description:</label>
-            <textarea id="event-description" rows="3" required></textarea>
-          </div>
-          <div class="form-group">
-            <label for="ticket-price">Ticket Price:</label>
-            <input type="number" id="ticket-price" required />
-          </div>
-          <div class="form-group">
-            <label for="event-category">Category:</label>
-            <select id="event-category" required>
-              <option value="" disabled selected>Select Category</option>
-              <option value="music">Music</option>
-              <option value="technology">Technology</option>
-              <option value="art">Art</option>
-              <option value="sports">Sports</option>
-              <option value="other">Other</option>
-            </select>
-          </div>
-          <button type="submit">Create Event</button>
-        </form>
-      </section>
+            <!-- Event Creation Section -->
+            <section id="create-event">
+                <h2>Create Event</h2>
+                <form id="create-event-form">
+                    <div class="form-group">
+                        <label for="event-name">Event Name:</label>
+                        <input type="text" id="event-name" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="event-date">Date:</label>
+                        <input type="date" id="event-date" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="event-description">Description:</label>
+                        <textarea id="event-description" rows="3" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="ticket-price">Ticket Price:</label>
+                        <input type="number" id="ticket-price" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="event-category">Category:</label>
+                        <select id="event-category" required>
+                            <option value="" disabled selected>Select Category</option>
+                            <option value="music">Music</option>
+                            <option value="technology">Technology</option>
+                            <option value="art">Art</option>
+                            <option value="sports">Sports</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                    <button type="submit">Create Event</button>
+                </form>
+            </section>
 
-      <!-- Discover Events Section -->
-      <section id="discover">
-        <h2>Discover Events</h2>
-        <div class="search-filter">
-          <input type="text" id="search-input" placeholder="Search events..." />
-          <select id="filter-status">
-            <option value="all">All Events</option>
-            <option value="upcoming">Upcoming Events</option>
-            <option value="current">Current Events</option>
-            <option value="past">Past Events</option>
-          </select>
-          <select id="filter-category">
-            <option value="all">All Categories</option>
-            <option value="music">Music</option>
-            <option value="technology">Technology</option>
-            <option value="art">Art</option>
-            <option value="sports">Sports</option>
-            <option value="other">Other</option>
-          </select>
-        </div>
-        <div id="events-feed" class="events-feed">
-          <!-- Event cards will be added dynamically here -->
-        </div>
-      </section>
+            <!-- Discover Events Section -->
+            <section id="discover">
+                <h2>Discover Events</h2>
+                <div class="search-filter" style="margin-top: 20px;">
+                    <input type="text" id="search-input" placeholder="Search events..." />
+                    <select id="filter-status">
+                        <option value="all">All Events</option>
+                        <option value="upcoming">Upcoming Events</option>
+                        <option value="current">Current Events</option>
+                        <option value="past">Past Events</option>
+                    </select>
+                    <select id="filter-category">
+                        <option value="all">All Categories</option>
+                        <option value="music">Music</option>
+                        <option value="technology">Technology</option>
+                        <option value="art">Art</option>
+                        <option value="sports">Sports</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div id="events-feed" class="events-feed">
+                    <!-- Event cards will be added dynamically here -->
+                </div>
+            </section>
 
-      <!-- Calendar Section -->
-      <section id="calendar">
-        <h2>Calendar</h2>
-        <div id="calendar-container"></div>
-      </section>
-    </main>
-  </div>
-
-  <!-- Ticket Booking Modal -->
-  <div id="ticket-modal" class="modal">
-    <div class="modal-content">
-      <span id="close-ticket-modal" class="close">&times;</span>
-      <h2>Book Ticket</h2>
-      <div id="modal-event-info">
-        <!-- Selected event info will appear here -->
-      </div>
-      <form id="ticket-form">
-        <div class="form-group">
-          <label for="buyer-name">Your Name:</label>
-          <input type="text" id="buyer-name" required />
-        </div>
-        <div class="form-group">
-          <label for="buyer-email">Email:</label>
-          <input type="email" id="buyer-email" required />
-        </div>
-        <button type="submit">Confirm Booking</button>
-      </form>
+            <!-- Calendar Section -->
+            <section id="calendar">
+                <h2>Calendar</h2>
+                <div id="calendar-container" style="margin-top: 20px;"></div>
+            </section>
+        </main>
     </div>
-  </div>
 
-  <!-- Edit Event Modal -->
-  <div id="edit-modal" class="modal">
-    <div class="modal-content">
-      <span id="close-edit-modal" class="close">&times;</span>
-      <h2>Edit Event</h2>
-      <form id="edit-event-form">
-        <input type="hidden" id="edit-event-id" />
-        <div class="form-group">
-          <label for="edit-event-name">Event Name:</label>
-          <input type="text" id="edit-event-name" required />
+    <!-- Ticket Booking Modal -->
+    <div id="ticket-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-ticket-modal" class="close">&times;</span>
+            <h2>Book Ticket</h2>
+            <div id="modal-event-info">
+                <!-- Selected event info will appear here -->
+            </div>
+            <form id="ticket-form">
+                <div class="form-group">
+                    <label for="buyer-name">Your Name:</label>
+                    <input type="text" id="buyer-name" required />
+                </div>
+                <div class="form-group">
+                    <label for="buyer-email">Email:</label>
+                    <input type="email" id="buyer-email" required />
+                </div>
+                <button type="submit">Confirm Booking</button>
+            </form>
         </div>
-        <div class="form-group">
-          <label for="edit-event-date">Date:</label>
-          <input type="date" id="edit-event-date" required />
-        </div>
-        <div class="form-group">
-          <label for="edit-event-description">Description:</label>
-          <textarea id="edit-event-description" rows="3" required></textarea>
-        </div>
-        <div class="form-group">
-          <label for="edit-ticket-price">Ticket Price:</label>
-          <input type="number" id="edit-ticket-price" required />
-        </div>
-        <div class="form-group">
-          <label for="edit-event-category">Category:</label>
-          <select id="edit-event-category" required>
-            <option value="" disabled>Select Category</option>
-            <option value="music">Music</option>
-            <option value="technology">Technology</option>
-            <option value="art">Art</option>
-            <option value="sports">Sports</option>
-            <option value="other">Other</option>
-          </select>
-        </div>
-        <button type="submit">Save Changes</button>
-      </form>
     </div>
-  </div>
 
-  <!-- FullCalendar JS -->
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
-  <script src="script.js"></script>
+    <!-- Edit Event Modal -->
+    <div id="edit-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-edit-modal" class="close">&times;</span>
+            <h2>Edit Event</h2>
+            <form id="edit-event-form">
+                <input type="hidden" id="edit-event-id" />
+                <div class="form-group">
+                    <label for="edit-event-name">Event Name:</label>
+                    <input type="text" id="edit-event-name" required />
+                </div>
+                <div class="form-group">
+                    <label for="edit-event-date">Date:</label>
+                    <input type="date" id="edit-event-date" required />
+                </div>
+                <div class="form-group">
+                    <label for="edit-event-description">Description:</label>
+                    <textarea id="edit-event-description" rows="3" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="edit-ticket-price">Ticket Price:</label>
+                    <input type="number" id="edit-ticket-price" required />
+                </div>
+                <div class="form-group">
+                    <label for="edit-event-category">Category:</label>
+                    <select id="edit-event-category" required>
+                        <option value="" disabled>Select Category</option>
+                        <option value="music">Music</option>
+                        <option value="technology">Technology</option>
+                        <option value="art">Art</option>
+                        <option value="sports">Sports</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <button type="submit">Save Changes</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- FullCalendar JS -->
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
