Reviews and Ratings

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Header with User Auth (from previous feature) -->
+  <!-- Header with User Authentication -->
   <header>
     <h1>EventSphere</h1>
     <div id="user-auth">
-      <!-- This will be updated by script.js based on authentication state -->
       <button id="login-btn">Login</button>
       <button id="register-btn">Register</button>
     </div>
@@ -214,6 +213,35 @@
           <input type="email" id="rsvp-email" required />
         </div>
         <button type="submit">Submit RSVP</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Review Modal -->
+  <div id="review-modal" class="modal">
+    <div class="modal-content">
+      <span id="close-review-modal" class="close">&times;</span>
+      <h2>Leave a Review</h2>
+      <div id="review-modal-info">
+        <!-- Event details for review will appear here -->
+      </div>
+      <form id="review-form">
+        <div class="form-group">
+          <label for="review-rating">Rating (1-5):</label>
+          <select id="review-rating" required>
+            <option value="" disabled selected>Select Rating</option>
+            <option value="1">1 - Very Poor</option>
+            <option value="2">2 - Poor</option>
+            <option value="3">3 - Average</option>
+            <option value="4">4 - Good</option>
+            <option value="5">5 - Excellent</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="review-text">Review:</label>
+          <textarea id="review-text" rows="3" required></textarea>
+        </div>
+        <button type="submit">Submit Review</button>
       </form>
     </div>
   </div>
