Live Chat or Discussion Forums

--- a/index.html
+++ b/index.html
@@ -246,6 +246,24 @@
     </div>
   </div>
 
+  <!-- Chat/Discussion Modal -->
+  <div id="chat-modal" class="modal">
+    <div class="modal-content">
+      <span id="close-chat-modal" class="close">&times;</span>
+      <h2>Event Discussion</h2>
+      <div id="chat-messages">
+        <!-- Chat messages will be displayed here -->
+      </div>
+      <form id="chat-form">
+        <div class="form-group">
+          <label for="chat-message">Your Message:</label>
+          <textarea id="chat-message" rows="2" required></textarea>
+        </div>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </div>
+
   <!-- Login Modal -->
   <div id="login-modal" class="modal">
     <div class="modal-content">
