--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <li><a href="#calendar">Calendar</a></li>
                 </ul>
             </nav>
-            <!-- <img src="" alt=""> -->
+            <img id="theme-toggle" src="sunpng.png" alt="Light Mode" style="cursor: pointer; width: 30px; height: 30px;">
+
         </header>
 
         <!-- Main Content Area -->
