--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EventSphere</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <!-- FullCalendar CSS -->
+    <!-- FullCalendar CSS (if using Calendar Integration) -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet" />
+    <!-- Leaflet CSS for Map Integration (if needed in future) -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+        integrity="sha256-sA+e+OaZ+xyA3nI+x84s6v7cGXLM5I9dwXq7jB6J+9Y=" crossorigin="" />
+    <!-- Google Font for a modern look -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -31,8 +38,12 @@
                     <li><a href="#calendar">Calendar</a></li>
                 </ul>
             </nav>
-            <img id="theme-toggle" src="sunpng.png" alt="Light Mode" style="cursor: pointer; width: 30px; height: 30px;">
-
+            <img id="theme-toggle" src="sunpng.png" alt="Light Mode"
+                style="cursor: pointer; width: 30px; height: 30px;">
+            <div id="user-auth">
+                <button id="login-btn">Login</button>
+                <button id="register-btn">Register</button>
+            </div>
         </header>
 
         <!-- Main Content Area -->
@@ -52,6 +63,10 @@
                     <div class="card">
                         <h3>Upcoming Events</h3>
                         <p id="upcoming-events">0</p>
+                    </div>
+                    <div class="card">
+                        <h3>Total RSVPs</h3>
+                        <p id="total-rsvps">0</p>
                     </div>
                 </div>
             </section>
@@ -86,6 +101,16 @@
                             <option value="sports">Sports</option>
                             <option value="other">Other</option>
                         </select>
+                    </div>
+                    <!-- NEW: Location Field -->
+                    <div class="form-group">
+                        <label for="event-location">Location (Address):</label>
+                        <input type="text" id="event-location" required />
+                    </div>
+                    <!-- Image Upload Field -->
+                    <div class="form-group">
+                        <label for="event-image">Event Image:</label>
+                        <input type="file" id="event-image" accept="image/*" />
                     </div>
                     <button type="submit">Create Event</button>
                 </form>
@@ -129,9 +154,7 @@
         <div class="modal-content">
             <span id="close-ticket-modal" class="close">&times;</span>
             <h2>Book Ticket</h2>
-            <div id="modal-event-info">
-                <!-- Selected event info will appear here -->
-            </div>
+            <div id="modal-event-info"></div>
             <form id="ticket-form">
                 <div class="form-group">
                     <label for="buyer-name">Your Name:</label>
@@ -180,13 +203,133 @@
                         <option value="other">Other</option>
                     </select>
                 </div>
+                <!-- Image Upload Field for Editing -->
+                <div class="form-group">
+                    <label for="edit-event-image">Event Image:</label>
+                    <input type="file" id="edit-event-image" accept="image/*" />
+                </div>
                 <button type="submit">Save Changes</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- RSVP Modal -->
+    <div id="rsvp-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-rsvp-modal" class="close">&times;</span>
+            <h2>RSVP to Event</h2>
+            <div id="rsvp-modal-info"></div>
+            <form id="rsvp-form">
+                <div class="form-group">
+                    <label for="rsvp-name">Your Name:</label>
+                    <input type="text" id="rsvp-name" required />
+                </div>
+                <div class="form-group">
+                    <label for="rsvp-email">Email:</label>
+                    <input type="email" id="rsvp-email" required />
+                </div>
+                <button type="submit">Submit RSVP</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Review Modal -->
+    <div id="review-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-review-modal" class="close">&times;</span>
+            <h2>Leave a Review</h2>
+            <div id="review-modal-info"></div>
+            <form id="review-form">
+                <div class="form-group">
+                    <label for="review-rating">Rating (1-5):</label>
+                    <select id="review-rating" required>
+                        <option value="" disabled selected>Select Rating</option>
+                        <option value="1">1 - Very Poor</option>
+                        <option value="2">2 - Poor</option>
+                        <option value="3">3 - Average</option>
+                        <option value="4">4 - Good</option>
+                        <option value="5">5 - Excellent</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="review-text">Review:</label>
+                    <textarea id="review-text" rows="3" required></textarea>
+                </div>
+                <button type="submit">Submit Review</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Chat/Discussion Modal -->
+    <div id="chat-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-chat-modal" class="close">&times;</span>
+            <h2>Event Discussion</h2>
+            <div id="chat-messages"></div>
+            <form id="chat-form">
+                <div class="form-group">
+                    <label for="chat-message">Your Message:</label>
+                    <textarea id="chat-message" rows="2" required></textarea>
+                </div>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- NEW: Map Modal -->
+    <div id="map-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-map-modal" class="close">&times;</span>
+            <h2>Event Location Map</h2>
+            <div id="map"></div>
+        </div>
+    </div>
+
+    <!-- Login Modal -->
+    <div id="login-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-login-modal" class="close">&times;</span>
+            <h2>Login</h2>
+            <form id="login-form">
+                <div class="form-group">
+                    <label for="login-email">Email:</label>
+                    <input type="email" id="login-email" required />
+                </div>
+                <div class="form-group">
+                    <label for="login-password">Password:</label>
+                    <input type="password" id="login-password" required />
+                </div>
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Register Modal -->
+    <div id="register-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-register-modal" class="close">&times;</span>
+            <h2>Register</h2>
+            <form id="register-form">
+                <div class="form-group">
+                    <label for="register-name">Name:</label>
+                    <input type="text" id="register-name" required />
+                </div>
+                <div class="form-group">
+                    <label for="register-email">Email:</label>
+                    <input type="email" id="register-email" required />
+                </div>
+                <div class="form-group">
+                    <label for="register-password">Password:</label>
+                    <input type="password" id="register-password" required />
+                </div>
+                <button type="submit">Register</button>
             </form>
         </div>
     </div>
 
     <!-- FullCalendar JS -->
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-Dotd70R3H8k3z6BpoXv3FRP46TCW5nH/TJDbbCXGgN0=" crossorigin=""></script>
     <script src="script.js"></script>
 </body>
 
